# cpp-boilerplate

./: .gitignore  readme.md
ae/: CMakeLists.txt
ae/src/: CMakeLists.txt  main.cpp
